[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textlink"
version = "0.0.1"
description = "Python library that helps you send SMS using TextLink API"
license = "MIT"
authors = [
  { name="TextLink", email="help@textlinksms.com" },
]
readme = "README.md"
homepage = "https://textlinksms.com"
repository = "https://github.com/Skocimis/textlink-py"
keywords = ["api", "sms", "api-client", "sms-api", "text-message", "simple-sms", "sms-verification", "user-verification", "bulk-sms", "sms-gateway"]
dependencies = [
  "requests"
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]